eZ Comments change log

1.0.0Beta2
 - Fixed bug that error occurs when a subscriber comments on a subsribed content without checking 'notify me'. 
 - Fixed the email field doesn't work
 - Added German translation (made by Georg Franz)
 - Fixed bug 16304: ezcomments: washing of name required
 - Fixed bug 16303: ezcomments - redirection not working
 - Fixed bug 16294: ezcomments: username and email are cached wrongly when posting comment
 - Added commentor ip into database table when commenting
 - Changed context of translation to make context consistent
 - Fixed bug 16276: ezcomments: cannot create translation

1.0.0Beta1
 - Fixed bug 016218: Check for an already present ezcomments attribute in class edit
 - Fixed bug: the eZ Comments extension information is not shown in ezinfo/about.
 - Fixed bug #16164: If the content is deleted, comments of the content are still there. Also applied for deleting Comment attribute and deleting class with Comment attribute. 
 - Fixed bug: comment doesn't work when a Comment attribute is added into existing class
 - Made the validation of adding commment and edit comment consistent (reuse class ezcomFormTool).
 - Added cache support in comment/view 
 - Removed 'notification' field in ezcomComment persistent object and database
 - Changed the license header in code
 - Fixed bug: if a subscriber is disabled in database, he can still subscribe comment.